--- a/introducao_html/estrututa_basica.html
+++ b/introducao_html/estrututa_basica.html
@@ -1,4 +1,11 @@
-<html>
-<head>
-    <title>Estrutura Básica de um Documento HTML</title>    
+<!DOCTYPE html> <!--determina o tipo de documento-->
+<html lang="pt-br"> <!--determina a linguagem do documento-->
+    <head>
+        <meta charset="UTF-8"> <!-- Define a codificação de caracteres -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura a visualização em dispositivos móveis -->
+        <title>Título da Página</title> <!-- Título da página -->   
+    </head> 
+    <body>
+        Conteúdo do site!
+    </body>
 </html>
