--- a/introducao_html/listas.html
+++ b/introducao_html/listas.html
@@ -1,19 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elementos de Listas</title>
+<!DOCTYPE html> 
+<html lang="en"> 
+
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Elementos de Listas</title> <!-- Título que aparece na aba do navegador -->
 </head>
-<body>
-    <h3>Lista Ordenada</h3>
-    <ol>
+
+<body> <!-- Corpo da página (conteúdo visível) -->
+
+    <h3>Lista Ordenada</h3> <!-- Título da seção -->
+    <ol> <!-- Lista ordenada (números) -->
+        <li>Item 1</li> <!-- Item de lista -->
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ol> <!-- Fim da lista ordenada -->
+
+    <h3>Lista não Ordenada</h3> <!-- Título da seção -->
+    <ul> <!-- Lista não ordenada (marcadores) -->
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
         <li>Item 5</li>
-    </ol>
-    
+    </ul> <!-- Fim da lista não ordenada -->
+
 </body>
-</html>
+
+</html> 
