--- a/the-moviebox/index.html
+++ b/the-moviebox/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/global.css">
     <title>THE MOVIE BOX</title>
 </head>
 
@@ -12,7 +13,7 @@
     <header>
         <!-- Cabeçalho: título, logo ou menu -->
         <div class="container">
-            <h1>THE MOVIE BOX</h1>
+            <h1>THE MOVIE BOX</h1
             <div class="actions">
                 <a href="#">Entrar</a>
                 <a href="#">Registrar</a>
@@ -67,16 +68,103 @@
                     </li>
                 </ol>
             </nav>
-            <section></section>
+            <section>
+
+                <div class="movie-card">
+                    <img src="assets/img/Y6pjszkKQUZ5uBbiGg7KWiCksJ.jpg" alt="Lilo & Stitch">
+                    <h3>Lilo & Stitch</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/2VUmvqsHb6cEtdfscEA6fqqVzLg.jpg" alt="Ballerina">
+                    <h3>Ballerina</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/4a63rQqIDTrYNdcnTXdPsQyxVLo.jpg" alt="MEGAN 2.0">
+                    <h3>MEGAN 2.0</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/4CkZl1LK6a5rXBqJB2ZP77h3N5i.jpg" alt="Sinner">
+                    <h3>Sinner</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/hqcexYHbiTBfDIdDWxrxPtVndBX.jpg" alt="Thunderbolts*e">
+                    <h3>Thunderbolts*e</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/9PXZIUsSDh4alB80jheWX4fhZmy.jpg" alt="F1">
+                    <h3>F1</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/ktqPs5QyuF8SpKnipvVHb3fwD8d.jpg" alt="The Ritual">
+                    <h3>The Ritual</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/ombsmhYUqR4qqOLOxAyr5V8hbyv.jpg" alt="Superman">
+                    <h3>Superman</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/lVgE5oLzf7ABmzyASEVcjYyHI41.jpg" alt="Head of States">
+                    <h3>Heads of States</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/rij9Eh4RVXyPet8A1BNU8pDvtmu.jpg" alt="The Hangman">
+                    <h3>The Hangman</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/SNEoUInCa5fAgwuEBMIMBGvkkh.jpg" alt="The Amateur">
+                    <h3>The Amateur</h3>
+                    <p>2025</p>
+                </div>
+
+                <div class="movie-card">
+                    <img src="assets/img/q0fGCmjLu42MPlSO9OYWpI5w86I.jpg" alt="Jurassic World Rebirth">
+                    <h3>Jurassic World Rebirth</h3>
+                    <p>2025</p>
+                </div>
+
+            </section>
+
         </div>
     </main>
 
     <footer>
         <!-- Rodapé: contatos, direitos, links -->
         <div class="container">
+            <p>The MovieBox 2025 - Todos os direitos são reservados</p>
+            <ul>
+                <li><a href="#"><i data-lucide="instagram"></i></a></li>
+                <li><a href="#"><i data-lucide="facebook"></i></a></li>
+                <li><a href="#"><i data-lucide="youtube"></i></a></li>
+
+            </ul>
 
         </div>
     </footer>
+
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+        lucide.createIcons();
+    </script>
 
 </body>
 
